# CubepanionAPI

./: .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.games-service  Dockerfile.leaderboard-service  README.MD  cache.go  chest_location_inserter.py  config.go  eggwars_map_inserter.py  go.mod  go.sum  go.work  go.work.sum  index.html  init.sql  main.go  makefile  mkdocs.yml  packets.proto  search.html  update_proto.sh
chests/: index.html
chests-service/: chest_service_test.go  go.mod  main.go  routes.go
core/: config.go  default_config.go  go.mod  go.sum  microservice.go  microservice_model.go  redis_cache.go
cubesocket/: client.go  go.mod  go.sum  main.go  packet_handler.go  ws.go
dev-config/: compose.yaml  init.sql
docker/: Dockerfile.base  Dockerfile.chest-service  Dockerfile.cubesocket  Dockerfile.games-service  Dockerfile.leaderboard-service  Dockerfile.maps-service  Dockerfile.stats-service
docs/: chests.md  games.md  index.md  leaderboard.md  maps.md  stats.md
games/: index.html
games-service/: games_service_test.go  go.mod  go.sum  main.go  routes.go
impl/: database.go  games.go  holder.go  player_locations.go  player_locations_query.go  query.go  query_chests.go  query_leaderboards.go  query_maps.go  query_submissions.go
integration/: connections.go  main.go  message.go
leaderboard/: index.html
leaderboard-service/: config.go  external.go  go.mod  go.sum  leaderboard_service_test.go  main.go  routes.go
maps/: index.html
maps-service/: go.mod  main.go  maps_service_test.go  routes.go
models/: database.go  database_data.go  games.go  holder.go  player_locations.go  requests.go
routes/: chest_api.go  leaderboard_api.go  map_api.go
scripts/: build_all.sh  chest_location_inserter.py  eggwars_map_inserter.py  update_proto.sh
search/: search_index.json
(+123 files in other folders)
