[package]
name = "cubepanion_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-extensible-rate-limit = "0.2.1"
actix-web = "4.3.1"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres"] }
toml = "0.7.3"
uuid = "1.3.1"
